# openpasture-agent-kit

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  SOUL.md  package-lock.json  package.json  plugin.yaml  pyproject.toml  tsconfig.json
.cursor/rules/: knowledge-categories.mdc  knowledge-youtube-ingestion.mdc  mintlify-docs-site.mdc
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: alpha-validation.yml
.tmp/hermes-openpasture-smoke/: farm.db  knowledge.db
.tmp/hermes-openpasture-smoke-2/: farm.db  knowledge.db
.tmp/hermes-openpasture-smoke-2/chroma/: chroma.sqlite3  index.json
.tmp/hermes-openpasture-smoke-2/pipeline-setups/: pipeline_setup_f6d3f49ef975.json
.tmp/hermes-openpasture-smoke-3/: farm.db  ingest-queue.json  knowledge.db
.tmp/hermes-openpasture-smoke-3/chroma/: chroma.sqlite3  index.json
.tmp/hermes-openpasture-smoke-4/: farm.db  knowledge.db
.tmp/hermes-openpasture-smoke-4/chroma/: chroma.sqlite3  index.json
.tmp/hermes-openpasture-smoke-4/pipeline-setups/: pipeline_setup_8528a7a08f3f.json
.tmp/hermes-openpasture-smoke/chroma/: chroma.sqlite3  index.json
.tmp/hermes-openpasture-smoke/pipeline-setups/: pipeline_setup_d003b13b9e94.json  pipeline_setup_eb7662ad11b7.json
.tmp/openpasture-live-smoke/: farm.db
.tmp/openpasture-live-smoke-2/: farm.db
.tmp/openpasture-live-smoke-3/: farm.db
convex/: README.md  farmStore.ts  http.ts  schema.ts
docs/: alpha-validation.md  architecture.md  chatgpt-farm-onboarding-app.md  cloud-boundary.md  cloud-handoff.md  domain.md  hosted-convex-roadmap.md  knowledge-base.md  knowledge-productization.md  self-hosting.md  vision.md  voice-and-boundaries.md
docs-site/: README.md  architecture.mdx  assistant.md  changelog.mdx  cli.mdx  contributing.mdx  core-concepts.mdx  developer-guidance.mdx  docs.json  environment-variables.mdx  hermes-adapter.mdx  hosted-cloud.mdx  index.mdx  knowledge.mdx  mcp-connector.mdx  mcp.mdx  quickstart.mdx  self-hosting.mdx  skills.mdx  troubleshooting.mdx
seed/: curated_videos.yaml  knowledge-categories.md
seed/principles/: greg_judy.md  joel_salatin.md  pasture_bird.md  richard_perkins.md  universal.md
skills/data-pipeline-setup/: SKILL.md
skills/farm-onboarding/: SKILL.md
skills/geo-onboarding/: SKILL.md
skills/knowledge-ingestion/: SKILL.md
skills/morning-brief/: SKILL.md
skills/pasture-assessment/: SKILL.md
skills/pipeline-spypoint/: SKILL.md
skills/rotation-planning/: SKILL.md
src/openpasture/: __init__.py  cli.py  context.py  manifest.py  plugin.py  runtime.py  skills.py  toolkit.py
tests/: __init__.py  conftest.py  test_chatgpt_app.py  test_cli.py  test_cloud_sync.py  test_runtime.py  test_toolkit.py
tests/briefing/: test_scheduler.py
tests/connectors/: test_mcp_auth.py
tests/domain/: test_geo.py  test_pipeline.py
tests/ingestion/: test_pipeline.py
tests/knowledge/: __init__.py  test_chunker.py  test_seed_loading.py
tests/store/: test_convex.py  test_sqlite.py  test_sqlite_knowledge.py
tests/tools/: test_geo_tools.py  test_knowledge_tools.py  test_mvp_flow.py  test_onboarding_tools.py  test_pipeline_tools.py  test_plugin_integration.py
tests/validation/: test_alpha_validation.py
(+54 files in other folders)
