[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpasture"
version = "0.1.0-alpha"
description = "Hermes plugin for pasture-raised livestock farm management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Cody Menefee" }
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "apscheduler>=3.10.4",
  "chromadb>=0.5.0",
  "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@1cec910b6a064d4e4821930be5cfaaf6145a2afd",
]

[project.optional-dependencies]
satellite = [
  "pystac-client>=0.7.6",
  "rasterio>=1.3.10",
  "xarray>=2024.3.0",
  "numpy>=1.26.4",
]
cloud = [
  "convex>=0.7.0",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.8",
]

[project.entry-points."hermes_agent.plugins"]
openpasture = "openpasture.plugin"

[project.scripts]
openpasture-alpha-validate = "openpasture.validation.alpha:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "alpha: reusable OSS alpha validation suite",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.openpasture.alpha_validation]
tested_hermes_version = "0.8.0"
tested_hermes_commit = "1cec910b6a064d4e4821930be5cfaaf6145a2afd"
